...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/rdg"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Choose one of three types:" />
                <RadioButton
                    android:id="@+id/rbBand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/band" />

                <RadioButton
                    android:id="@+id/rbMusician"
...
                    android:layout_weight="1.5"
                    android:text="@string/first_name"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etFirstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLength="16"
                    android:textSize="18sp" />
            </LinearLayout>
...
                    android:layout_marginStart="10dp"
                    android:text="@string/last_name"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLength="16"
                    android:textSize="18sp" />
            </LinearLayout>
...
                    android:text="@string/username_field"
                    android:layout_marginStart="10dp"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLength="16"
                    android:textSize="18sp" />
            </LinearLayout>
...
                    android:layout_marginStart="10dp"
                    android:text="@string/email_address"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etMail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLength="64"
                    android:textSize="18sp" />
            </LinearLayout>
...
                    android:text="@string/date_of_birth"
                    android:layout_marginStart="10dp"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:focusable="false"
                    android:longClickable="false"
                    android:textSize="18sp" />
...
                    android:text="@string/musicianFinderInstruments"
                    android:layout_marginStart="10dp"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/newProfileSelectedInstrument"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:focusable="false"
                    android:longClickable="false"
                    android:textSize="18sp" />
...
                    android:text="@string/musicianFinderLevels"
                    android:layout_marginStart="10dp"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/newProfileSelectedLevel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:focusable="false"
                    android:longClickable="false"
                    android:textSize="18sp" />
...
                    android:id="@+id/btnUserCreationCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_cancel" />

                <Button
                    android:id="@+id/btnUserCreationCreate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_using_application" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
...
