...
                    android:layout_weight="1.5"
                    android:text="@string/band_name"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etBandName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
...
                    android:id="@+id/btnBandCreationCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_cancel" />

                <Button
                    android:id="@+id/btnBandCreationCreate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_using_application" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
...
